--- a/src/train/config.yaml
+++ b/src/train/config.yaml
@@ -19,13 +19,19 @@ cache_dir: "./cache"
 num_train_epochs: 3
 per_device_train_batch_size: 16
 gradient_accumulation_steps: 2
-learning_rate: 5.0e-5
+learning_rate: 3.0e-4
+lr_scheduler_type: "cosine"
+warmup_steps: 1000
+max_grad_norm: 1.0
+weight_decay: 1.0e-4
 
 # Data
 block_size: 512
 
 # Logging
+eval_steps: 200
+save_steps: 1000
 logging_steps: 20
 
 # Performance
-fp16: true
+bf16: true
