--- a/src/train/config.yaml
+++ b/src/train/config.yaml
@@ -19,11 +19,12 @@ cache_dir: "./cache"
 num_train_epochs: 3
 per_device_train_batch_size: 16
 gradient_accumulation_steps: 2
-learning_rate: 3.0e-4
+lr_muon: 3.0e-4
+lr_adam: 1.0e-8
 lr_scheduler_type: "cosine"
 warmup_steps: 1000
 max_grad_norm: 1.0
-weight_decay: 1.0e-4
+weight_decay: 0.1
 
 # Data
 block_size: 512
