--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "numpy",
     "torch",
     "transformers",
+    "peft",
     "git+https://github.com/GAD-cell/muon-clip.git@main"
 ]
 
