--- a/src/train/training_config.yaml
+++ b/src/train/training_config.yaml
@@ -15,10 +15,20 @@ text_column: "text"
 output_dir: "./a2d_output"
 cache_dir: "./cache"
 
+
+#LoRA config
+use_lora: true
+lora_r: 8
+lora_alpha: 16
+lora_dropout: 0.1
+lora_target_modules: ["q_proj", "v_proj", "o_proj", "k_proj", "up_proj", "down_proj"]
+
+
 # Training
 num_train_epochs: 3
 per_device_train_batch_size: 16
 gradient_accumulation_steps: 2
+learning_rate: 5.0e-4
 lr_muon: 3.0e-4
 lr_adam: 1.0e-8
 lr_scheduler_type: "cosine"
@@ -32,7 +42,7 @@ block_size: 512
 # Logging
 eval_steps: 200
 save_steps: 1000
-logging_steps: 20
+logging_steps: 5
 
 # Performance
 bf16: true
