--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "torch",
     "transformers",
     "peft",
-    "git+https://github.com/GAD-cell/muon-clip.git@main"
+    "git+https://github.com/GAD-cell/muon-clip.git@main",
+    "hf_transfer",
+    "huggingface_hub"
 ]
 
 [tool.uv]
